fixed CSS .card because Avatar film was visible when spinner is on

--- a/src/css/details.css
+++ b/src/css/details.css
@@ -3,12 +3,11 @@
 }
 
 .box-info {
-text-align: center;
-
+  text-align: center;
 }
 
 .card {
-  display: flex;
+  display: none;
   flex-direction: row;
   gap: 10px;
   background: var(--color-cardbg);
